docs: add and link new table entity

--- a/pizzeria-relazioni/src/main/resources/templates/home.html
+++ b/pizzeria-relazioni/src/main/resources/templates/home.html
@@ -24,7 +24,8 @@
                     🍕 View All Pizzas – See a complete list of pizzas currently on the menu. <br>
                     ➕ Add New Pizzas – Create delicious new pizza options with custom ingredients and prices. <br>
                     ✏️ Edit Pizzas – Update descriptions, adjust prices, or tweak ingredients anytime. <br>
-                    🗑️ Delete Pizzas – Remove outdated or discontinued pizzas from the menu.
+                    🗑️ Delete Pizzas – Remove outdated or discontinued pizzas from the menu. <br>
+                    🆕 New Feature – You can now add special offers.
                 </p>
                 <h3 class="my-4">
                     Easily keep your menu fresh and exciting with just a few clicks.
