--- a/pizzeria-relazioni/src/main/resources/templates/pizzas/show.html
+++ b/pizzeria-relazioni/src/main/resources/templates/pizzas/show.html
@@ -22,26 +22,32 @@
                 <p class="card-text my-3">
                     <strong>Price: </strong>[[*{price}]]€
                 </p>
-                <div class="card align-items-center px-4 mb-3 back-basil" th:object="${sale}">
-                    <p class="card-title fw-bold fs-3 text-decoration-none">
+                <div class="card align-items-center px-4 mb-3 back-basil" th:object="${sale}" th:if="${pizza.getSales().size() > 0}">
+                    <p class="card-title fw-bold fs-3 text-decoration-none cheese">
                         Active sales:
                     </p>
                     <div th:each="sale : ${sales}">
-                        <p class="card-text my-3">
+                        <p class="card-text my-3 cheese">
                             <strong>Title: </strong>[[${sale.title}]]
                         </p>
-                        <p class="card-text my-3">
+                        <p class="card-text my-3 cheese">
                             <strong>Start date: </strong>[[${sale.startDate}]]
                         </p>
-                        <p class="card-text my-3">
+                        <p class="card-text my-3 cheese">
                             <strong>Finish date: </strong>[[${sale.finishDate}]]
                         </p>
+                        <hr class="border-2 charcoal">
                         <div class="mb-3">
                             <a th:href="@{/sales/edit/{id}(id=${sale.id})}" class="btn back-sauce cheese">
                                 Update
                             </a>
                         </div>
                     </div>
+                </div>
+                <div class="card align-items-center px-4 mb-3 back-sauce" th:unless="${pizza.getSales().size() > 0}">
+                    <p class="card-title fw-bold fs-3 text-decoration-none">
+                        No active sales at the moment
+                    </p>
                 </div>
             </div>
         </div>
