docs: add ingredients form and create section to ingredients controller

--- a/pizzeria-relazioni/src/main/resources/templates/fragments/navbar.html
+++ b/pizzeria-relazioni/src/main/resources/templates/fragments/navbar.html
@@ -18,7 +18,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarID">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" th:href="@{/pizzas}">Our pizzas</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/pizzas}">Your pizzas</a>
+                    </div>
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" th:href="@{/ingredients}">Your ingredients</a>
                     </div>
                 </div>
             </div>
